app/assets/stylesheets/custom2.css
/* ... */
.carousel-inner > .active,
.carousel-inner > .next,
.carousel-inner > .prev {
  display: block; }
.carousel-inner > .active {
  left: 0; }
.carousel-inner > .next,
.carousel-inner > .prev {
  position: absolute;
  top: 0;
  width: 100%; }
.carousel-inner > .next {
  left: 100%; }
.carousel-inner > .prev {
  left: -100%; }
.carousel-inner > .next.left,
.carousel-inner > .prev.right {
  left: 0; }
.carousel-inner > .active.left {
  left: -100%; }
.carousel-inner > .active.right {
  left: 100%; }

.carousel-control {
  position: absolute;
  top: 40%;
  left: 15px;
  width: 40px;
  height: 40px;
  margin-top: -20px;
  font-size: 60px;
  font-weight: 100;
  line-height: 30px;
  color: white;
  text-align: center;
  background: #222222;
  border: 3px solid white;
  -webkit-border-radius: 23px;
  -moz-border-radius: 23px;
  border-radius: 23px;
  opacity: 0.5;
  filter: alpha(opacity=50); }
  .carousel-control.right {
    left: auto;
    right: 15px; }
  .carousel-control:hover, .carousel-control:focus {
    color: white;
    text-decoration: none;
    opacity: 0.9;
    filter: alpha(opacity=90); }

.carousel-indicators {
  position: absolute;
  top: 15px;
  right: 15px;
  z-index: 5;
  margin: 0;
  list-style: none; }
  .carousel-indicators li {
    display: block;
    float: left;
    width: 10px;
    height: 10px;
    margin-left: 5px;
    text-indent: -999px;
    background-color: #ccc;
    background-color: rgba(255, 255, 255, 0.25);
    border-radius: 5px; }
  .carousel-indicators .active {
    background-color: #fff; }

.carousel-caption {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 15px;
  background: #333333;
  background: rgba(0, 0, 0, 0.75); }

.carousel-caption h4,
.carousel-caption p {
  color: white;
  line-height: 20px; }

.carousel-caption h4 {
  margin: 0 0 5px; }

.carousel-caption p {
  margin-bottom: 0; }

.hero-unit {
  padding: 60px;
  margin-top: 50px;
  margin-bottom: 30px;
  font-size: 18px;
  font-weight: 200;
  line-height: 30px;
  background-color: transparent;
  }
  .hero-unit h1 {
    margin-bottom: 0;
    font-size: 45px;
    line-height: 1;
    color: white;
    letter-spacing: -1px;
    text-shadow: 3px 3px 3px black;}
  .hero-unit li {
    line-height: 30px; }

.pull-right {
  float: right; }

.pull-left {
  float: left; }

.hide {
  display: none; }

.show {
  display: block; }

.invisible {
  visibility: hidden; }

.affix {
  position: fixed; }

.clearfix {
  *zoom: 1; }
  .clearfix:before, .clearfix:after {
    display: table;
    content: "";
    line-height: 0; }
  .clearfix:after {
    clear: both; }

.hide-text {
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0; }

.input-block-level {
  display: block;
  width: 100%;
  min-height: 30px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box; }

/* mixins, variables, etc. */
/* universal */
html {
  overflow-y: scroll; }

body {
  padding-top: 60px; }

section {
  overflow: auto; }

textarea {
  resize: vertical; }

.center {
  text-align: center; }
  .center h1 {
    margin-bottom: 10px; }

/* typography */
h1, h2, h3, h4, h5, h6 {
  line-height: 1; }

h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 30px;
  text-align: center; }

h2 {
  font-size: 1.2em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: #999999; }

p {
  font-size: 1.1em;
  line-height: 1.7em; }

/* header */

#denarri_logo
{
float: left;
height:35px;
width:35px;
padding-top:5px;
padding-bottom:5px;
padding-right:10px;
padding-left:5px;
}

#logo {
  float: left;
  font-size: 1.7em;
  color: white;
  letter-spacing: -1px;
  padding-top: 9px;
 
  line-height: 1; }
  #logo:hover {
    color: white;
    text-decoration: none; }

/* homepage */

.home_caption {
  color: white;
  text-shadow: 2px 2px 2px black;
}



/* footer */
footer {
  margin-top: 45px;
  padding-top: 5px;
  border-top: 1px solid #eaeaea;
  color: #999999; }
  footer a {
    color: #555555; }
    footer a:hover {
      color: #222222; }
  footer small {
    float: left; }
  footer ul {
    float: right;
    list-style: none; }
    footer ul li {
      float: left;
      margin-left: 10px; }

/* mixins, variables, etc. */
/* miscellaneous */
.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box; }

/* sidebar */
aside section {
  padding: 10px 0;
  border-top: 1px solid #eeeeee; }
  aside section:first-child {
    border: 0;
    padding-top: 0; }
  aside section span {
    display: block;
    margin-bottom: 3px;
    line-height: 1; }
  aside section h1 {
    font-size: 1.4em;
    text-align: left;
    letter-spacing: -1px;
    margin-bottom: 3px;
    margin-top: 0px; }

.gravatar {
  float: left;
  margin-right: 10px; }

/* forms */
input, textarea, select, .uneditable-input {
  border: 1px solid #bbb;
  width: 100%;
  margin-bottom: 15px;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box; }

input {
  height: auto !important; }

#error_explanation {
  color: #f00; }
  #error_explanation ul {
    list-style: none;
    margin: 0 0 18px 0; }

/* Users index */
.users {
  list-style: none;
  margin: 0; }
  .users li {
    overflow: auto;
    padding: 10px 0;
    border-top: 1px solid #eeeeee; }
    .users li:last-child {
      border-bottom: 1px solid #eeeeee; }

/* microposts */
.microposts {
  list-style: none;
  margin: 10px 0 0 0; }
  .microposts li {
    padding: 10px 0;
    border-top: 1px solid #e8e8e8; }

.content {
  font-size: 20px;
  display: block; }

.timestamp {
  color: #999999; }

.gravatar {
  float: left;
  margin-right: 10px; }

aside textarea {
  height: 35px;
  margin-bottom: 5px; }

#how-page-header {
	text-align: center;
	padding-top: 50px;
	padding-bottom: 60px;
}

#how-it-works-pics {
	float:left;
	width: 25%
}
/* ... */

